<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



<Button
android:id="@+id/HomeBt"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:layout_marginStart="152dp"
android:layout_marginTop="12dp"
android:layout_marginBottom="136dp"
android:text="Home"
app:layout_constraintBottom_toBottomOf="parent"
app:layout_constraintStart_toStartOf="parent" />



    <ScrollView
        android:id="@+id/alerts" android:layout_width="wrap_content" android:layout_height="match_parent"
        tools:ignore="MissingConstraints">
        <RelativeLayout android:id="@+id/content_container" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RelativeLayout android:id="@+id/page_alerts_ek1" android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <View android:id="@+id/_bg__alerts_ek2" android:background="@drawable/_bg__alerts_ek2_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="428dp" android:layout_height="909dp"/>
                <View android:id="@+id/rectangle_40" android:background="@drawable/rectangle_40_shape" android:layout_marginStart="0dp" android:layout_marginTop="698dp" android:layout_width="428dp" android:layout_height="185dp"/>
                <View android:id="@+id/rectangle_39" android:background="@drawable/rectangle_39_shape" android:layout_marginStart="0dp" android:layout_marginTop="96dp" android:layout_width="428dp" android:layout_height="694dp"/>
                <TextView android:id="@+id/alerts_ek3" android:fontFamily="Ibarra Real Nova" android:textStyle="bold" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="40sp" android:textColor="@color/alerts_ek3_color" android:layout_marginLeft="41dp" android:layout_marginTop="122dp" android:layout_width="344dp" android:layout_height="138dp" android:text="@string/alerts_ek3_string"/>
                <ImageView android:id="@+id/untitled_design__3__2" android:src="@drawable/untitled_design__3__2" android:contentDescription="untitled_design__3__2" android:layout_marginStart="154dp" android:layout_marginTop="819dp" android:layout_width="120dp" android:layout_height="70dp"/>
                <RelativeLayout android:id="@+id/group_3" android:layout_marginTop="177dp" android:layout_marginStart="3dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <RelativeLayout android:id="@+id/frame_1" android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <RelativeLayout android:id="@+id/frame_3" android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                            <RelativeLayout android:id="@+id/group_2" android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                                <RelativeLayout android:id="@+id/frame_2" android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                                    <RelativeLayout android:id="@+id/group_4" android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                                        <RelativeLayout android:id="@+id/group_1" android:layout_marginTop="0dp" android:layout_marginStart="0dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                                            <View android:id="@+id/rectangle_37" android:background="@drawable/rectangle_37_shape" android:layout_marginStart="0dp" android:layout_marginTop="438dp" android:layout_width="422dp" android:layout_height="118dp"/>
                                            <TextView android:id="@+id/water_is_running_low_" android:fontFamily="Metal" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="32sp" android:textColor="@color/water_is_running_low__color" android:layout_marginLeft="32dp" android:layout_marginTop="474dp" android:layout_width="370dp" android:layout_height="77dp" android:text="@string/water_is_running_low__string"/>
                                            <TextView android:id="@+id/_16_7_22" android:fontFamily="Metal" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="15sp" android:textColor="@color/water_is_running_low__color" android:layout_marginLeft="44dp" android:layout_marginTop="445dp" android:layout_width="57dp" android:layout_height="41.5dp" android:text="@string/_16_7_22_string"/>
                                            <TextView android:id="@+id/resolved" android:fontFamily="Metal" android:textSize="15sp" android:textColor="@color/water_is_running_low__color" android:layout_marginLeft="321dp" android:layout_marginTop="451dp" android:layout_width="86.5dp" android:layout_height="41.5dp" android:text="@string/resolved_string"/>
                                            <View android:id="@+id/rectangle_40_ek1" android:background="@drawable/rectangle_40_ek1_shape" android:layout_marginStart="0dp" android:layout_marginTop="292dp" android:layout_width="422dp" android:layout_height="118dp"/>
                                            <TextView android:id="@+id/you_might_have_a_leak_" android:fontFamily="Metal" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="32sp" android:textColor="@color/water_is_running_low__color" android:layout_marginLeft="32dp" android:layout_marginTop="328dp" android:layout_width="370dp" android:layout_height="77dp" android:text="@string/you_might_have_a_leak__string"/>
                                            <TextView android:id="@+id/_19_7_22" android:fontFamily="Metal" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="15sp" android:textColor="@color/water_is_running_low__color" android:layout_marginLeft="44dp" android:layout_marginTop="299dp" android:layout_width="57dp" android:layout_height="41.5dp" android:text="@string/_19_7_22_string"/>
                                            <TextView android:id="@+id/resolved_ek1" android:fontFamily="Metal" android:textSize="15sp" android:textColor="@color/water_is_running_low__color" android:layout_marginLeft="321dp" android:layout_marginTop="305dp" android:layout_width="86.5dp" android:layout_height="41.5dp" android:text="@string/resolved_ek1_string"/>
                                            <View android:id="@+id/rectangle_41" android:background="@drawable/rectangle_41_shape" android:layout_marginStart="0dp" android:layout_marginTop="146dp" android:layout_width="422dp" android:layout_height="118dp"/>
                                            <TextView android:id="@+id/water_is_running_low__ek1" android:fontFamily="Metal" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="32sp" android:textColor="@color/water_is_running_low__color" android:layout_marginLeft="40dp" android:layout_marginTop="182dp" android:layout_width="370dp" android:layout_height="77dp" android:text="@string/water_is_running_low__ek1_string"/>
                                            <TextView android:id="@+id/_22_7_22" android:fontFamily="Metal" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="15sp" android:textColor="@color/water_is_running_low__color" android:layout_marginLeft="44dp" android:layout_marginTop="153dp" android:layout_width="57dp" android:layout_height="41.5dp" android:text="@string/_22_7_22_string"/>
                                            <TextView android:id="@+id/resolved_ek2" android:fontFamily="Metal" android:textSize="15sp" android:textColor="@color/water_is_running_low__color" android:layout_marginLeft="321dp" android:layout_marginTop="159dp" android:layout_width="86.5dp" android:layout_height="41.5dp" android:text="@string/resolved_ek2_string"/>
                                            <View android:id="@+id/rectangle_42" android:background="@drawable/rectangle_42_shape" android:layout_marginStart="0dp" android:layout_marginTop="0dp" android:layout_width="422dp" android:layout_height="118dp"/>
                                            <TextView android:id="@+id/water_is_flowing_" android:fontFamily="Metal" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="32sp" android:textColor="@color/water_is_flowing__color" android:layout_marginLeft="40dp" android:layout_marginTop="36dp" android:layout_width="370dp" android:layout_height="77dp" android:text="@string/water_is_flowing__string"/>
                                            <TextView android:id="@+id/just_now" android:fontFamily="Metal" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="15sp" android:textColor="@color/water_is_flowing__color" android:layout_marginLeft="42dp" android:layout_marginTop="7dp" android:layout_width="62dp" android:layout_height="41.5dp" android:text="@string/just_now_string"/>
                                            <TextView android:id="@+id/active" android:fontFamily="Metal" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="15sp" android:textColor="@color/water_is_flowing__color" android:layout_marginLeft="338dp" android:layout_marginTop="8dp" android:layout_width="60dp" android:layout_height="41.5dp" android:text="@string/active_string"/>
                                        </RelativeLayout>
                                    </RelativeLayout>
                                </RelativeLayout>
                            </RelativeLayout>
                        </RelativeLayout>
                    </RelativeLayout>
                </RelativeLayout>
                <ImageView android:id="@+id/rectangle_42_ek1" android:src="@drawable/rectangle_42_ek1" android:contentDescription="rectangle_42_ek1" android:layout_marginStart="293dp" android:layout_marginTop="26dp" android:layout_width="106dp" android:layout_height="43dp"/>
                <TextView android:id="@+id/log_out" android:fontFamily="Open Sans" android:textStyle="bold" android:layout_gravity="center_horizontal|center" android:gravity="center" android:textSize="15sp" android:textColor="@color/rectangle_37_color" android:layout_marginLeft="301dp" android:layout_marginTop="26dp" android:layout_width="98dp" android:layout_height="53.5dp" android:text="@string/log_out_string"/>
                <RelativeLayout android:id="@+id/bell" android:layout_marginTop="833dp" android:layout_marginStart="287dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:id="@+id/icon_ek1" android:src="@drawable/icon_ek1" android:contentDescription="icon_ek1" android:layout_marginStart="7.38dp" android:layout_marginTop="3.06dp" android:layout_width="44.25dp" android:layout_height="42.88dp"/>
                </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

